# embtest

./: CMakeLists.txt  README.md
boards/stm32f4/: board.c  board.h  system_stm32f4xx.c
examples/test_blink/: test_blink.c
